# Gen-AI-practice

./: client.py  mathserver.py  pyproject.toml  requirement.txt  weatherserver.py
data/text_file/: machine_learning_intro.txt  python_intro.txt
langchain/: langchain.ipynb  langgrapg.ipynb  messages.ipynb  middleware.ipynb  model_intergration.ipynb  structured_output.ipynb  tool_intergration.ipynb
rag/: document.ipynb
