[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "command>=0.1.0",
    "faiss-cpu>=1.14.3",
    "fastmcp>=3.4.4",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "langchain-groq>=1.1.3",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.3",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.7",
    "mcp>=1.28.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers",
    "sklearn",
]
